# GraphicsEngine

./: .clang-tidy  .gitignore  AttributeFactory_8h_source.html  BuildAll.ps1  BuildAll.sh  CMakeLists.txt  CMakePresets.json  DllImpExp_8h_source.html  Doxyfile  EntityManager_8h_source.html  Entity_8h_source.html  GraphicsEngine.dox  GraphicsEngine.sln  GraphicsEngine_8dox.html  ICameraFly_8h_source.html  ICameraViewport_8h_source.html  ICamera_8h.html  ICamera_8h.js  ICamera_8h_source.html  IEngine_8h_source.html  IEntityFactory_8h_source.html  ILog_8h_source.html  ITexture_8h_source.html  NOCMakePresets.json  Observable_8h_source.html  README.md  ShaderManager_8h_source.html  Types_8h_source.html  _config.yml  annotated.html  annotated_dup.js  classGraphicsEngine_1_1EntityManager-members.html  classGraphicsEngine_1_1EntityManager.html  classGraphicsEngine_1_1EntityManager.js  classGraphicsEngine_1_1ICamera-members.html  classGraphicsEngine_1_1ICamera.html  classGraphicsEngine_1_1ICamera.js  classGraphicsEngine_1_1ICameraFly-members.html  classGraphicsEngine_1_1ICameraFly.html  classGraphicsEngine_1_1ICameraViewport-members.html  (+64 more)
.github/workflows/: BuildGraphicsEngineClang.yml  BuildGraphicsEngineGCC.yml  RunUnitTestsGCC.yml  clang-tidy.yml  clang_build.yml  clang_tidy_check.yml  cmake-multi-platform.yml  cppcheck.yml  deploy_pages.yml  jekyll-gh-pages.yml  static.yml
GraphicsEngine/: Buffer.cpp  CMakeLists.txt  Color.cpp  Engine.cpp  Engine.h  Entity.h  Error.cpp  Error.h  GL.cpp  GLUtilities.cpp  GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters  IndexedPoints.cpp  Log.cpp  LogUtilities.cpp  SafeGL.cpp  SafeGL.h  Shader.cpp  Shader.h  ShaderUtilities.cpp  StaticAssertions.cpp  VertexArrayObject.cpp  dllmain.cpp  framework.h  stb_image.cpp
GraphicsEngine/include/: Color.h  GraphicsEngineFwd.h  IAttribute.h  IEngine.h  IEntity.h  ILog.h  IShader.h  IUniform.h  Texture.h  Uniform.h
GraphicsEngine/include/GraphicsEngine/: Attribute.h  AttributeFactory.h  DllImpExp.h  Entity.h  EntityManager.h  Error.h  GraphicsEngineFwd.h  GraphicsEngineImpExp.h  IAttribute.h  ICamera.h  ICameraFly.h  ICameraViewport.h  IEngine.h  IEntity.h  IEntityFactory.h  ILog.h  IShader.h  ITexture.h  IUniform.h  Observable.h  Shader.h  ShaderManager.h  ShaderSnippets.h  ShaderUtilities.h  Types.h  attribute_factory.h  dll_export.h  entity.h  temp.h
GraphicsEngine/shaders/: A0Pos3fA1Dummy2f.vert  A0Pos3fA1Dummy3f.vert  A1RGB.frag  GreenScalar.frag  TexturedTriangle.vert
GraphicsEngine/src/: Attribute.cpp  Attribute.h  AttributeFactory.cpp  Camera.cpp  Camera.h  CameraFly.cpp  CameraFly.h  CameraViewport.cpp  CameraViewport.h  Debug.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManagerImpl.cpp  EntityManagerImpl.h  Error.cpp  Error.h  Fwd.h  IEngine.cpp  Log.cpp  Log.h  ObservableImpl.h  SafeGL.cpp  SafeGL.h  Shader.cpp  Shader.h  ShaderImpl.cpp  ShaderImpl.h  ShaderManager.cpp  ShaderManagerImpl.cpp  ShaderManagerImpl.h  ShaderUtilities.cpp  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  attribute_factory_utilities.cpp  (+7 more)
GraphicsEngine/src/glad/: glad.h
Interfaces/: Color.h  Engine.h  GLUtilities.h  GraphicsEngineImpExp.h  ShaderUtilities.h
Interfaces/GraphicsEngine/: Buffer.h  Engine.h  GL.h  Log.h  (+12 more)
Sandbox/: App.cpp  App.h  Apps.h  BackgroundColorWidget.cpp  BackgroundColorWidget.h  CMakeLists.txt  DemoIndexedPointsApp.cpp  DemoIndexedPointsApp.h  DemoTriangleApp.cpp  DemoTriangleApp.h  DemoTriangleRGBApp.cpp  DemoTriangleRGBApp.h  EngineLog.txt  EngineLogWidget.cpp  EngineLogWidget.h  Header.h  ImGuiDemoWindowApp.cpp  ImGuiDemoWindowApp.h  MainLoop.cpp  MainLoop.h  MainMenuApp.cpp  MainMenuWidget.cpp  PolygonModeWidget.cpp  PolygonModeWidget.h  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  ShaderWidget.cpp  ShaderWidget.h  UI.cpp  Widget.cpp  Widget.h  Window.h  fwd.h
Sandbox/shaders/: DemoContainer.frag  DemoContainerRGB.frag  DemoContainerRGB.vert  DemoCoordinateSystems.frag  DemoCoordinateSystems.vert  DemoIndexedPoints.vert  DemoTexturedTriangle.vert  DemoTexturesCombined.frag  DemoTexturesCombined.vert  DemoTriangle.vert  DemoTriangleRGB.frag  DemoTriangleRGB.vert
Sandbox/src/: MainLoop.cpp  Sandbox.cpp  UI.cpp  UI.h  Window.cpp  Window.h  fwd.h  pch.h
Sandbox/src/App/: App.cpp  App.h  Apps.h  DemoContainerApp.cpp  DemoContainerApp.h  DemoContainerRGBApp.cpp  DemoContainerRGBApp.h  DemoCoordinateSystemsApp.cpp  DemoCoordinateSystemsApp.h  DemoCoordinateSystemsDepthApp.cpp  DemoCoordinateSystemsDepthApp.h  DemoCoordinateSystemsMultipleApp.cpp  DemoCoordinateSystemsMultipleApp.h  DemoFlashingGreenTriangleApp.cpp  DemoFlashingGreenTriangleApp.h  DemoFlyCameraApp.cpp  DemoFlyCameraApp.h  DemoIndexedPointsApp.cpp  DemoIndexedPointsApp.h  DemoTexturedTriangleApp.cpp  DemoTexturedTriangleApp.h  DemoTexturesCombinedApp.cpp  DemoTexturesCombinedApp.h  DemoTransformationsApp.cpp  DemoTransformationsApp.h  DemoTriangleApp.cpp  DemoTriangleApp.h  DemoTriangleRGBApp.cpp  DemoTriangleRGBApp.h  ImGuiDemoWindowApp.cpp  ImGuiDemoWindowApp.h  MainMenuApp.cpp  MainMenuApp.h  TestApp.cpp  TestApp.h
Sandbox/src/Utilities/: DemoCoordinateSystemsUtilities.cpp  DemoCoordinateSystemsUtilities.h
Sandbox/src/Widget/: BackgroundColorWidget.cpp  BackgroundColorWidget.h  DearImGuiDemoWindowWidget.cpp  DearImGuiDemoWindowWidget.h  EngineLogWidget.cpp  EngineLogWidget.h  MainMenuWidget.cpp  MainMenuWidget.h  PolygonModeWidget.cpp  PolygonModeWidget.h  ShaderWidget.cpp  ShaderWidget.h  Widget.cpp  Widget.h
Sandbox/textures/: Attributions.txt
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_4.js
tests/: CMakeLists.txt
tests/src/: AttributeFactoryUT.cpp  attribute_factory_test.cpp  entity_test.cpp
(+2 files in other folders)
